--- a/signup.css
+++ b/signup.css
@@ -14,6 +14,14 @@ input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
+i{
+  float: right;
+}
+i:hover{
+  opacity: 80%;
+  color: #04AA6D;
+  transition-duration: 0.5s;
+}
 
 hr {
   border: 1px solid #f1f1f1;
