--- a/signup.css
+++ b/signup.css
@@ -1,26 +1,25 @@
-* {box-sizing: border-box}
+* {
+  box-sizing: border-box;
+}
 
 /* Full-width input fields */
-  input[type=text], input[type=password], select {
+input[type="text"],
+input[type="password"],
+select {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
+  font-family: "Trebuchet MS";
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
   background-color: #ddd;
   outline: none;
-}
-i{
-  float: right;
-}
-i:hover{
-  opacity: 80%;
-  color: #04AA6D;
-  transition-duration: 0.5s;
+  font-family: "Trebuchet MS";
 }
 
 hr {
@@ -30,7 +29,7 @@ hr {
 
 /* Set a style for all buttons */
 button {
-  background-color: #04AA6D;
+  background-color: #04aa6d;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -38,10 +37,19 @@ button {
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
+  font-family: "Trebuchet MS";
+}
+
+h1 {
+  font-family: "Trebuchet MS";
+}
+
+body {
+  font-family: "Trebuchet MS";
 }
 
 button:hover {
-  opacity:1;
+  opacity: 1;
 }
 
 /* Extra styles for the cancel button */
@@ -51,9 +59,19 @@ button:hover {
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
+.cancelbtn,
+.signupbtn {
   float: left;
   width: 50%;
+}
+
+i {
+  float: right;
+}
+i:hover {
+  opacity: 80%;
+  color: #04aa6d;
+  transition-duration: 0.5s;
 }
 
 /* Add padding to container elements */
@@ -70,7 +88,8 @@ button:hover {
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
+  .cancelbtn,
+  .signupbtn {
     width: 100%;
   }
 }
