--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ form {
   text-align: center;
   font-family: "Open Sans";
   border-radius: 25px;
+  background-color: white;
 }
 
 /* Full-width inputs */
