--- a/signup.css
+++ b/signup.css
@@ -72,6 +72,7 @@ i:hover {
   opacity: 80%;
   color: #04aa6d;
   transition-duration: 0.5s;
+  cursor: pointer;
 }
 
 /* Add padding to container elements */
