--- a/index.css
+++ b/index.css
@@ -1,3 +1,16 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family:'Ubuntu',sans-serif ;
+}
+html{
+	scroll-behavior: smooth;
+}
+body{
+	background-image: url('4357_Website_Background.jpg');
+}
 /* Bordered form */
 form {
   border: 3px solid #f1f1f1;
