--- a/signup.css
+++ b/signup.css
@@ -1,15 +1,17 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	text-decoration: none;
-	font-family:'Ubuntu',sans-serif ;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Ubuntu", sans-serif;
 }
-html{
-	scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-body{
-	background-image: url('4357_Website_Background.jpg');
+body {
+  background-image: url("4357_Website_Background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Full-width input fields */
@@ -37,6 +39,9 @@ hr {
   margin-bottom: 25px;
 }
 
+form {
+  background-color: white;
+}
 /* Set a style for all buttons */
 button {
   background-color: #04aa6d;
